# terabox-downloader

./: .env.example  .gitignore  .npmignore  Dockerfile  README.md  bot.py  cli.js  config.py  docker-compose.yml  package.json  pyproject.toml  requirements.txt
admin/: __init__.py  handlers.py  stats.py
database/: __init__.py  migrations.py  models.py
payments/: __init__.py  callback.py  handler.py  klikqris.py  qris.py  webhook_server.py
terabox/: __init__.py  downloader.py  resolver.py  utils.py
terabox/strategies/: __init__.py  direct.py  publicearn.py  savetube.py
