[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "terabox-downloader-bot"
version = "1.0.0"
description = "Telegram bot untuk download file dari Terabox — QRIS payment, inline buttons, KlikQRIS integration"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "mmoaa"}]
keywords = ["terabox", "downloader", "telegram", "bot", "qris", "klikqris"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot[job-queue]>=20.0",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "aiofiles>=23.0",
]

[project.urls]
Homepage = "https://github.com/mocasus/terabox-downloader"
"Bug Tracker" = "https://github.com/mocasus/terabox-downloader/issues"
"Say Thanks" = "https://trakteer.id/mmooaa"

[tool.setuptools]
py-modules = []
